# template-based-3d-reconstruction

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
epfl/: Camera.h
epfl/MatchTracker/: LKPointTracker.cpp
epfl/Mesh/: LaplacianMesh.cpp  LaplacianMesh.h  TriangleMesh.h
epfl/PointMatching/: FernKeypointMatcher3D2D.cpp  FernKeypointMatcher3D2D.h  KeypointMatcher3D2D.cpp
epfl/RealtimeDemo/: RealtimeDemo.cpp  RealtimeDemo.h  RealtimeDemo.h.autosave
epfl/Utils/: Visualization.cpp
images/: chessboard.txt
include/: Alghoritm.h  Algorithm.h  KpMatcher.h  Reconstructor.h  SimulatedAnnealing.h  Utilities.h  affineHelper.h  kpMatcher.h  reconstructor.h  simulatedAnnealing.h  utilities.h
src/: KpMatcher.cpp  Reconstructor.cpp  SimulatedAnnealing.cpp  Utilities.cpp  affineHelper.cpp  kpMatcher.cpp  reconstructor.cpp  simulatedAnnealing.cpp  utilities.cpp
